// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatterModule should format documents 1`] = `
[
  {
    "newText": "text",
    "range": {
      "end": {
        "character": 0,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`FormatterModule should format documents 2`] = `
[
  FullTextDocument {
    "_content": "a {}",
    "_languageId": "bar",
    "_lineOffsets": undefined,
    "_uri": "foo",
    "_version": 1,
  },
  {
    "config": {
      "rules": {
        "indentation": [
          2,
        ],
        "no-missing-end-of-source-newline": true,
      },
    },
  },
]
`;

exports[`FormatterModule with client dynamic registration support, onInitialize should not request static registration 1`] = `
{
  "capabilities": {
    "documentFormattingProvider": false,
  },
}
`;

exports[`FormatterModule without client dynamic registration support, onInitialize should request static registration 1`] = `
{
  "capabilities": {
    "documentFormattingProvider": true,
  },
}
`;
